--- a/src/main/resources/assets/sovereign/lang/en_us.json
+++ b/src/main/resources/assets/sovereign/lang/en_us.json
@@ -7,7 +7,7 @@
 	"itemGroup.sovereign_tab": "Sovereignty",
 	
 	"entity.sovereign.temple_cornerstone": "Temple Cornerstone",
-	"entity.sovereign.city_cornerstone": "City Cornerstone",
+	"entity.sovereign.capital_cornerstone": "Capital Cornerstone",
 	
 	"key.category.sovereignmod.sovereign": "Sovereign",
 	"key.sovereignmod.drink_water": "Drink Water"
